--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,7 +9,7 @@
 }
 
 img{
-    width: 40%;
+    width: 30%;
 }
 
 .body{
@@ -63,7 +63,7 @@ h1{
     color: #c3a9ff;
 }
 .body3{
-    background-color: #c3a9ff;
+    background-color: #adbada;
     padding: 30px;
     margin-top: 10px;
 }
@@ -80,3 +80,76 @@ h1{
     background-color: black;
     color: white;
 }
+.body4{
+    background-color: #8697c3;
+    padding: 30px;
+    margin-top: 10px;
+}
+.body4 a{
+    color: black;
+    padding: 15px 30px;
+    border-radius: 30px;
+    background-color: white;
+    transition-duration: 3ms;
+    border: none;
+    text-decoration: none;
+}
+.body4 a:hover{
+    background-color: black;
+    color: white;
+}
+.body5{
+    padding: 30px;
+    margin-top: 10px;
+    background-color: white;
+}
+.body5 a{
+    color: black;
+    padding: 15px 30px;
+    border-radius: 30px;
+    background-color: #8697c3;
+    transition-duration: 3ms;
+    border: none;
+    text-decoration: none;
+}
+.body5 a:hover{
+    background-color: black;
+    color: #8697c3;
+}
+
+.body6{
+    padding: 30px;
+    margin-top: 10px;
+    background-color: #7191e6;
+}
+.body6 a{
+    color: black;
+    padding: 15px 30px;
+    border-radius: 30px;
+    background-color: white;
+    transition-duration: 3ms;
+    border: none;
+    text-decoration: none;
+}
+.body6 a:hover{
+    background-color: black;
+    color: white;
+}
+.body7{
+    padding: 30px;
+    margin-top: 10px;
+    background-color: white;
+}
+.body7 a{
+    color: black;
+    padding: 15px 30px;
+    border-radius: 30px;
+    background-color: #7191e6;
+    transition-duration: 3ms;
+    border: none;
+    text-decoration: none;
+}
+.body6 a:hover{
+    background-color: black;
+    color: #7191e6;
+}    
